--- a/components/badge/src/vwc-badge.scss
+++ b/components/badge/src/vwc-badge.scss
@@ -31,6 +31,7 @@
 
 :host([translucent]) {
 	--opaque: 20;
+	color: var(#{color-semantic.$color-base-foreground});
 }
 
 @include shape-mixins.shape(
